--- a/app/server/appsmith-server/src/main/resources/email/ce/inviteExistingUserToWorkspaceTemplate.html
+++ b/app/server/appsmith-server/src/main/resources/email/ce/inviteExistingUserToWorkspaceTemplate.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html data-editor-version="2" class="sg-campaigns" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-  <!--[if !mso]><!-->
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <!--<![endif]-->
-  <!--[if (gte mso 9)|(IE)]>
-  <xml>
-    <o:OfficeDocumentSettings>
-      <o:AllowPNG/>
-      <o:PixelsPerInch>96</o:PixelsPerInch>
-    </o:OfficeDocumentSettings>
-  </xml>
-  <![endif]-->
-  <!--[if (gte mso 9)|(IE)]>
+    <head>
+      <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+      <!--[if !mso]><!-->
+      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+      <!--<![endif]-->
+      <!--[if (gte mso 9)|(IE)]>
+      <xml>
+        <o:OfficeDocumentSettings>
+          <o:AllowPNG/>
+          <o:PixelsPerInch>96</o:PixelsPerInch>
+        </o:OfficeDocumentSettings>
+      </xml>
+      <![endif]-->
+      <!--[if (gte mso 9)|(IE)]>
   <style type="text/css">
     body {width: 600px;margin: 0 auto;}
     table {border-collapse: collapse;}
     table, td {mso-table-lspace: 0pt;mso-table-rspace: 0pt;}
     img {-ms-interpolation-mode: bicubic;}
   </style>
-  <![endif]-->
-  <style type="text/css">
+<![endif]-->
+      <style type="text/css">
     body, p, div {
       font-family: arial,helvetica,sans-serif;
       font-size: 14px;
@@ -114,90 +114,94 @@
       }
     }
   </style>
-  <style>
+    <style>
       @media screen and (max-width:480px) {
         table\0 {
           width: 480px !important;
           }
       }
     </style>
-  <!--user entered Head Start--><!--End Head user entered-->
-</head>
-<body>
-<center class="wrapper" data-link-color="#1188E6" data-body-style="font-size:14px; font-family:arial,helvetica,sans-serif; color:#2a2f3d; background-color:#FFFFFF;">
-  <div class="webkit">
-    <table cellpadding="0" cellspacing="0" border="0" width="100%" class="wrapper" bgcolor="#FFFFFF">
-      <tr>
-        <td valign="top" bgcolor="#FFFFFF" width="100%">
-          <table width="100%" role="content-container" class="outer" align="center" cellpadding="0" cellspacing="0" border="0">
+      <!--user entered Head Start--><!--End Head user entered-->
+    </head>
+    <body>
+      <center class="wrapper" data-link-color="#1188E6" data-body-style="font-size:14px; font-family:arial,helvetica,sans-serif; color:#2a2f3d; background-color:#FFFFFF;">
+        <div class="webkit">
+          <table cellpadding="0" cellspacing="0" border="0" width="100%" class="wrapper" bgcolor="#FFFFFF">
             <tr>
-              <td width="100%">
-                <table width="100%" cellpadding="0" cellspacing="0" border="0">
+              <td valign="top" bgcolor="#FFFFFF" width="100%">
+                <table width="100%" role="content-container" class="outer" align="center" cellpadding="0" cellspacing="0" border="0">
                   <tr>
-                    <td>
-                      <!--[if mso]>
-                      <center>
-                        <table><tr><td width="600">
-                      <![endif]-->
-                      <table width="100%" cellpadding="0" cellspacing="0" border="0" style="width:100%; max-width:600px;" align="center">
+                    <td width="100%">
+                      <table width="100%" cellpadding="0" cellspacing="0" border="0">
                         <tr>
-                          <td role="modules-container" style="padding:0px 0px 0px 0px; color:#2a2f3d; text-align:left;" bgcolor="#FFFFFF" width="100%" align="left"><table class="module preheader preheader-hide" role="module" data-type="preheader" border="0" cellpadding="0" cellspacing="0" width="100%" style="display: none !important; mso-hide: all; visibility: hidden; opacity: 0; color: transparent; height: 0; width: 0;">
-                            <tr>
-                              <td role="module-content">
-                                <p></p>
-                              </td>
-                            </tr>
-                          </table><table class="wrapper" role="module" data-type="image" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="f6bedc77-b64a-4c5d-aa4e-e5e0cd77a1f3">
-                            <tbody>
-                            <tr>
-                              <td style="font-size:6px; line-height:10px; padding:20px 0px 0px 0px;" valign="top" align="left">
-                                <img class="max-width" border="0" style="display:block; color:#000000; text-decoration:none; font-family:Helvetica, arial, sans-serif; font-size:16px; max-width:30% !important; width:30%; height:auto !important;" width="180" alt="" data-proportionally-constrained="true" data-responsive="true" src="http://cdn.mcauto-images-production.sendgrid.net/5eeb89071b6cfabb/4bd9cb6b-fe6a-49df-9db8-9ba7bef3e1e4/1823x302.png">
-                              </td>
-                            </tr>
-                            </tbody>
-                          </table><table class="module" role="module" data-type="text" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="ac55f7bf-c7df-41ec-9d96-715b70e4bf85" data-mc-module-version="2019-10-22">
-                            <tbody>
-                            <tr>
-                              <td style="padding:18px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content"><div><div style="font-family: inherit; text-align: inherit">You have been invited to the workspace {{inviterWorkspaceName}} for your internal apps built on Appsmith.</div><div></div></div></td>
-                            </tr>
-                            </tbody>
-                          </table><table border="0" cellpadding="0" cellspacing="0" class="module" data-role="module-button" data-type="button" role="module" style="table-layout:fixed;" width="100%" data-muid="bb171e80-9abe-4d60-92d5-3698002d83d8">
-                            <tbody>
-                            <tr>
-                              <td align="left" bgcolor="" class="outer-td" style="padding:0px 0px 18px 0px;">
-                                <table border="0" cellpadding="0" cellspacing="0" class="wrapper-mobile" style="text-align:center;">
-                                  <tbody>
-                                  <tr>
-                                    <td align="center" bgcolor="#ff6d2d" class="inner-td" style="border-radius:6px; font-size:16px; text-align:left; background-color:inherit;">
-                                      <a href="{{primaryLinkUrl}}" style="background-color:#ff6d2d; border:0px solid #333333; border-color:#333333; border-radius:6px; border-width:0px; color:#ffffff; display:inline-block; font-size:14px; font-weight:normal; letter-spacing:0px; line-height:normal; padding:12px 18px 12px 18px; text-align:center; text-decoration:none; border-style:solid; font-family:helvetica,sans-serif;" target="_blank">Go to {{inviterWorkspaceName}}</a>
-                                    </td>
-                                  </tr>
-                                  </tbody>
-                                </table>
-                              </td>
-                            </tr>
-                            </tbody>
-                          </table><table class="module" role="module" data-type="divider" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="1500a6f2-366b-4747-b5cd-9957c6a272e0">
-                            <tbody>
-                            <tr>
-                              <td style="padding:0px 0px 0px 0px;" role="module-content" height="100%" valign="top" bgcolor="">
-                                <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%" height="1px" style="line-height:1px; font-size:1px;">
-                                  <tbody>
-                                  <tr>
-                                    <td style="padding:0px 0px 1px 0px;" bgcolor="#353535"></td>
-                                  </tr>
-                                  </tbody>
-                                </table>
-                              </td>
-                            </tr>
-                            </tbody>
-                          </table><table class="module" role="module" data-type="code" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="2e9df2e5-99e4-414d-8782-70f382c1c050">
-                            <tbody>
-                            <tr>
-                              <td height="100%" valign="top" role="module-content"><table>
-                                <tr>
-                                  <td style="padding: 0px 0px 0px 0px; width: 10%; vertical-align: middle;" valign="middle" align="center">
-                                    <img class="max-width" border="0" style="
+                          <td>
+                            <!--[if mso]>
+    <center>
+    <table><tr><td width="600">
+  <![endif]-->
+                                    <table width="100%" cellpadding="0" cellspacing="0" border="0" style="width:100%; max-width:600px;" align="center">
+                                      <tr>
+                                        <td role="modules-container" style="padding:0px 0px 0px 0px; color:#2a2f3d; text-align:left;" bgcolor="#FFFFFF" width="100%" align="left"><table class="module preheader preheader-hide" role="module" data-type="preheader" border="0" cellpadding="0" cellspacing="0" width="100%" style="display: none !important; mso-hide: all; visibility: hidden; opacity: 0; color: transparent; height: 0; width: 0;">
+    <tr>
+      <td role="module-content">
+        <p></p>
+      </td>
+    </tr>
+  </table><table class="wrapper" role="module" data-type="image" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="f6bedc77-b64a-4c5d-aa4e-e5e0cd77a1f3">
+    <tbody>
+      <tr>
+        <td style="font-size:6px; line-height:10px; padding:20px 0px 0px 0px;" valign="top" align="left">
+          <img class="max-width" border="0" style="display:block; color:#000000; text-decoration:none; font-family:Helvetica, arial, sans-serif; font-size:16px; max-width:30% !important; width:30%; height:auto !important;" width="180" alt="" data-proportionally-constrained="true" data-responsive="true" src="http://cdn.mcauto-images-production.sendgrid.net/5eeb89071b6cfabb/4bd9cb6b-fe6a-49df-9db8-9ba7bef3e1e4/1823x302.png">
+        </td>
+      </tr>
+    </tbody>
+  </table><table class="module" role="module" data-type="text" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="ac55f7bf-c7df-41ec-9d96-715b70e4bf85" data-mc-module-version="2019-10-22">
+    <tbody>
+      <tr>
+        <td style="padding:18px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content"><div><div style="font-family: inherit; text-align: inherit">Hey,<br>
+<br>
+{{inviterFirstName}} has given you {{role}} access to the Appsmith workspace {{inviterWorkspaceName}}.<br>
+<br>
+Go to your Appsmith workspace to see fast, usable, beautiful apps.&nbsp;</div><div></div></div></td>
+      </tr>
+    </tbody>
+  </table><table border="0" cellpadding="0" cellspacing="0" class="module" data-role="module-button" data-type="button" role="module" style="table-layout:fixed;" width="100%" data-muid="bb171e80-9abe-4d60-92d5-3698002d83d8">
+      <tbody>
+        <tr>
+          <td align="left" bgcolor="" class="outer-td" style="padding:0px 0px 18px 0px;">
+            <table border="0" cellpadding="0" cellspacing="0" class="wrapper-mobile" style="text-align:center;">
+              <tbody>
+                <tr>
+                <td align="center" bgcolor="#ff6d2d" class="inner-td" style="border-radius:6px; font-size:16px; text-align:left; background-color:inherit;">
+                  <a href="{{primaryLinkUrl}}" style="background-color:#ff6d2d; border:0px solid #333333; border-color:#333333; border-radius:6px; border-width:0px; color:#ffffff; display:inline-block; font-size:14px; font-weight:normal; letter-spacing:0px; line-height:normal; padding:12px 18px 12px 18px; text-align:center; text-decoration:none; border-style:solid; font-family:helvetica,sans-serif;" target="_blank">Go to your Appsmith workspace</a>
+                </td>
+                </tr>
+              </tbody>
+            </table>
+          </td>
+        </tr>
+      </tbody>
+    </table><table class="module" role="module" data-type="divider" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="1500a6f2-366b-4747-b5cd-9957c6a272e0">
+    <tbody>
+      <tr>
+        <td style="padding:0px 0px 0px 0px;" role="module-content" height="100%" valign="top" bgcolor="">
+          <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%" height="1px" style="line-height:1px; font-size:1px;">
+            <tbody>
+              <tr>
+                <td style="padding:0px 0px 1px 0px;" bgcolor="#353535"></td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+      </tr>
+    </tbody>
+  </table><table class="module" role="module" data-type="code" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="2e9df2e5-99e4-414d-8782-70f382c1c050">
+    <tbody>
+      <tr>
+        <td height="100%" valign="top" role="module-content"><table>
+    <tr>
+        <td style="padding: 0px 0px 0px 0px; width: 10%; vertical-align: middle;" valign="middle" align="center">
+            <img class="max-width" border="0" style="
                 display: block;
                 color: #000000;
                 text-decoration: none;
@@ -207,9 +211,9 @@
                 width: 100%;
                 height: auto !important;
                 " width="73" alt="" data-proportionally-constrained="true" data-responsive="true" src="http://cdn.mcauto-images-production.sendgrid.net/5eeb89071b6cfabb/8eecf8e5-2e8f-40fc-88f3-24a130a950e8/548x550.png">
-                                  </td>
-                                  <td style="text-align: left; width: 90%; vertical-align: middle; padding-left: 1rem;">
-                                    <div style="font-family: inherit; text-align: left">
+        </td>
+        <td style="text-align: left; width: 90%; vertical-align: middle; padding-left: 1rem;">
+            <div style="font-family: inherit; text-align: left">
                 <span style="
                     box-sizing: border-box;
                     padding-top: 0px;
@@ -270,31 +274,31 @@
                 ">
                 1390 Market Street, Suite 200, San Francisco, California 94102, United States
                 </span>
-                                    </div>
+            </div>
+        </td>
+    </tr>
+</table></td>
+      </tr>
+    </tbody>
+  </table></td>
+                                      </tr>
+                                    </table>
+                                    <!--[if mso]>
                                   </td>
                                 </tr>
-                              </table></td>
-                            </tr>
-                            </tbody>
-                          </table></td>
+                              </table>
+                            </center>
+                            <![endif]-->
+                          </td>
                         </tr>
                       </table>
-                      <!--[if mso]>
-                      </td>
-                      </tr>
-                      </table>
-                      </center>
-                      <![endif]-->
                     </td>
                   </tr>
                 </table>
               </td>
             </tr>
           </table>
-        </td>
-      </tr>
-    </table>
-  </div>
-</center>
-</body>
-</html>
+        </div>
+      </center>
+    </body>
+  </html>
