--- a/app/server/appsmith-server/src/main/resources/email/ce/inviteWorkspaceTemplate.html
+++ b/app/server/appsmith-server/src/main/resources/email/ce/inviteWorkspaceTemplate.html
@@ -158,7 +158,11 @@
   </table><table class="module" role="module" data-type="text" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="ac55f7bf-c7df-41ec-9d96-715b70e4bf85" data-mc-module-version="2019-10-22">
     <tbody>
       <tr>
-        <td style="padding:18px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content"><div><div style="font-family: inherit; text-align: inherit">Join {{inviterFirstName}} in the Appsmith workspace {{inviterWorkspaceName}} and get access to fast, usable, beautiful apps.</div><div></div></div></td>
+        <td style="padding:18px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content"><div><div style="font-family: inherit; text-align: inherit">Hey,<br>
+<br>
+{{inviterFirstName}} has invited you as {{role}} to the Appsmith workspace {{inviterWorkspaceName}}.<br>
+<br>
+Join your Appsmith workspace to get access to fast, usable, beautiful apps.</div><div></div></div></td>
       </tr>
     </tbody>
   </table><table border="0" cellpadding="0" cellspacing="0" class="module" data-role="module-button" data-type="button" role="module" style="table-layout:fixed;" width="100%" data-muid="bb171e80-9abe-4d60-92d5-3698002d83d8">
